<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/music_icon1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/homeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/app_name_description"
            android:textSize="?attr/font_xlarge"
            android:textStyle="bold|italic" />


        <LinearLayout
            android:id="@+id/InputLayoutGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/songLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/song_label"
                android:textSize="?attr/font_medium" />

            <EditText
                android:id="@+id/enterNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:gravity="clip_vertical|center_horizontal"
                android:inputType="number"
                android:maxLength="3"
                android:phoneNumber="false"
                android:textSize="?attr/font_medium" />

            <Button
                android:id="@+id/goForSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/button_choose_nr"
                android:textAllCaps="false"
                android:textSize="?attr/font_medium" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/versionFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:gravity="bottom|center_horizontal"
        android:text="@string/app_version_footer"
        android:textColor="@color/colorFooter"
        android:textSize="?attr/font_xlarge"
        android:textStyle="bold|italic" />

</RelativeLayout>